# minecraft

./: .gitignore  CMakeLists.txt  README.md
Include/MC/: Debug.hpp
Include/MC/Core/: Block.hpp  Chunk.hpp  DataManager.hpp  Object.hpp  Scene.hpp  Section.hpp  World.hpp
Include/MC/Graphics/: IndexBuffer.hpp  ProceduralTexture.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
Include/MC/imgui/: Utils.hpp
Shaders/: basic.glsl  cube.glsl  light.glsl
ressources/3dmodels/: complexeCube.mtl  cube.stl  untitled.fbx
ressources/3dmodels/twoMaterials/: twoMaterials.mtl
ressources/blocs/: bl.json
src/: UniverseBuilder.cpp
src/Core/: Block.cpp  Chunk.cpp  DataManager.cpp  Object.cpp  Scene.cpp  Section.cpp  World.cpp
src/Graphics/: IndexBuffer.cpp  ProceduralTexture.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
src/Misc/: Debug.cpp
